<resources>
    <string name="app_name1">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="train_string">TRAIN</string>
    <string name="l_i_n_k_string">L   I   N   K</string>
    <string name="password_string">Password</string>
    <string name="username_ek1_string">Username</string>
    <string name="sign_in_string">Sign in</string>
    <string name="forgot_password___string">Forgot password ?</string>
    <string name="login_ek3_string">Login</string>
    <string name="don_t_have_an_account___click_here_string">Dont have an account ? Click here</string>
    <string name="welcome_to_rail__trip_string">Welcome to Rail -Trip</string>
    <string name="rail_string">RAIL</string>
    <string name="connect_string">CONNECT</string>
    <string name="register_ek3_string">Register</string>
    <string name="password_ek2_string">Password</string>
    <string name="confirm_password_ek1_string">Confirm Password</string>
    <string name="phone_ek1_string">Phone</string>
    <string name="nic_or_passport_number_string">NIC or Passport Number</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="email_ek1_string">Email</string>
    <string name="register_ek4_string">Register</string>
    <string name="rail_ek1_string">RAIL</string>
    <string name="t_r_i_p_string">T  R  I  P</string>
    <string name="train_booking_string">Train Booking</string>
    <string name="today_schedule_string">Today Schedule</string>
    <string name="railway_resorts_booking_string">Railway Resorts Booking</string>
    <string name="rail_ek2_string">RAIL</string>
    <string name="t_r_i_p_ek1_string">T  R  I  P</string>
    <string name="other_services_string">Other Services</string>
    <string name="railway_freight_services_string">Railway Freight Services</string>
    <string name="make_reservations_string">Make Reservations</string>
    <string name="rail_ek3_string">RAIL</string>
    <string name="t_r_i_p_ek2_string">T  R  I  P</string>
    <string name="transporting_parcels_by_train_string">Transporting Parcels by Train</string>
    <string name="transporting_goods_using_railway_wagons_string">Transporting Goods using Railway Wagons</string>
    <string name="rail_ek4_string">RAIL</string>
    <string name="t_r_i_p_ek3_string">T  R  I  P</string>
    <string name="display_ad_at_railway_stations_and_other_railway_premises_string">Display Ad at railway stations and other railway premises</string>
    <string name="photography_or_filming_at_railway_premises_and_the_trains_string">Photography or filming at railway premises and the trains</string>
    <string name="obtaining_space_in_railway_premises_for_business_purposes_string">Obtaining space in railway premises for business purposes</string>
    <string name="issuing_railway_tickets_string">Issuing railway tickets</string>
    <string name="rservation_of_retiring_rooms_at_railway_stations_string">Rservation of retiring rooms at railway stations</string>
    <string name="rail_ek5_string">RAIL</string>
    <string name="t_r_i_p_ek4_string">T  R  I  P</string>
    <string name="calculate_ek1_string">Calculate</string>
    <string name="next_string">Next</string>
    <string name="from___string">From :</string>
    <string name="to___string">To :</string>
    <string name="item___string">Item :</string>
    <string name="distance___string">Distance :</string>
    <string name="transport_cost___string">Transport Cost :</string>
    <string name="weight__kg____string">Weight (kg) :</string>
    <string name="select_string">Select</string>
    <string name="select_ek1_string">Select</string>
    <string name="select_ek2_string">Select</string>
    <string name="rail_ek6_string">RAIL</string>
    <string name="t_r_i_p_ek5_string">T  R  I  P</string>
    <string name="see_guidelines_string"><u>See Guidelines</u></string>
    <string name="next_ek1_string">Next</string>
    <string name="calculate_ek3_string">Calculate</string>
    <string name="next_ek2_string">Next</string>
    <string name="from___ek2_string">From :</string>
    <string name="to___ek3_string">To :</string>
    <string name="item___ek1_string">Item :</string>
    <string name="distance___ek1_string">Distance :</string>
    <string name="transport_cost___ek1_string">Transport Cost :</string>
    <string name="weight__kg____ek1_string">Weight (kg) :</string>
    <string name="__maximum_50kg__string">(Maximum 50kg)</string>
    <string name="select_ek3_string">Select</string>
    <string name="select_ek4_string">Select</string>
    <string name="select_ek5_string">Select</string>
    <string name="rail_ek7_string">RAIL</string>
    <string name="t_r_i_p_ek6_string">T  R  I  P</string>
    <string name="see_guidelines_ek1_string"><u>See Guidelines</u></string>
    <string name="rail_ek8_string">RAIL</string>
    <string name="t_r_i_p_ek7_string">T  R  I  P</string>
    <string name="proceed_with_payment_string">Proceed with payment</string>
    <string name="phone_ek3_string">Phone</string>
    <string name="nic_ek2_string">NIC</string>
    <string name="name_of_receiver_string">Name of Receiver</string>
    <string name="submit_purchase_bills_string">Submit purchase bills</string>
    <string name="full_name_string">Full Name</string>
    <string name="address_string">Address</string>
    <string name="tcharooking_string">TCharooking</string>
    <string name="today_schedule_ek1_string">Today Schedule</string>
    <string name="railway_resorts_booking_ek1_string">Railway Resorts Booking</string>
    <string name="rail_ek9_string">RAIL</string>
    <string name="t_r_i_p_ek8_string">T  R  I  P</string>
    <string name="rail_ek10_string">RAIL</string>
    <string name="t_r_i_p_ek9_string">T  R  I  P</string>
    <string name="contact_us_string">Contact us</string>
    <string name="logout_string">Logout</string>
    <string name="terms___conditions_string">Terms &amp; conditions</string>
    <string name="change_your_bookings_string">Change your bookings</string>
    <string name="train_schedule_string">Train Schedule</string>
    <string name="delete_your_bookings_string">Delete your bookings</string>
    <string name="rail_ek11_string">RAIL</string>
    <string name="t_r_i_p_ek10_string">T  R  I  P</string>
    <string name="travel_sri_lanka_string">Travel Sri Lanka</string>
    <string name="badulla_string">Badulla</string>
    <string name="anuradhapura_string">Anuradhapura</string>
    <string name="matara_string">Matara</string>
    <string name="galle_string">Galle</string>
    <string name="kandy_string">Kandy</string>
    <string name="ella_string">Ella</string>
    <string name="area__16_52_km__elevation__0_cm_weather__27_c__wind_sw_at_10_km_h__86__humidity_population__93_118__2020__area_code__091_neighborhoods__fort__makuluwa__minuwangoda____more_string">Area: 16.52 kmElevation: 0 cmWeather: 27C, Wind SW at 10 km/h, 86% Humidity Population: 93,118 (2020)Area code: 091Neighborhoods: Fort, Makuluwa, Minuwangoda... more</string>
    <string name="galle_is_a_city_on_the_southwest_coast_of_sri_lanka__it_s_known_for_galle_fort__the_fortified_old_city_founded_by_portuguese_colonists_in_the_16th_century__stone_sea_walls__expanded_by_the_dutch__encircle_car_free_streets_with_architecture_reflecting_portuguese__dutch_and_british_rule__notable_buildings_include_the_18th_century_dutch_reformed_church__galle_lighthouse_stands_on_the_fort_s_southeast_tip__string">Galle is a city on the southwest coast of Sri Lanka. Its known for Galle Fort, the fortified old city founded by Portuguese colonists in the 16th century. Stone sea walls, expanded by the Dutch, encircle car-free streets with architecture reflecting Portuguese, Dutch and British rule. Notable buildings include the 18th-century Dutch Reformed Church. Galle Lighthouse stands on the forts southeast tip.</string>
    <string name="galle_ek1_string">Galle</string>
    <string name="rail_ek12_string">RAIL</string>
    <string name="t_r_i_p_ek11_string">T  R  I  P</string>
    <string name="travel_sri_lanka_ek1_string">Travel Sri Lanka</string>
    <string name="agree_to_terms___conditions_string">Agree to terms &amp; conditions</string>
    <string name="select_payment_method_string">Select payment method</string>
    <string name="confirm___pay_string">Confirm &amp; Pay</string>
    <string name="next_ek3_string">Next</string>
    <string name="phone_ek5_string">Phone</string>
    <string name="nic_or_passport_number_ek1_string">NIC or Passport Number</string>
    <string name="first_name_ek1_string">First Name</string>
    <string name="email_ek3_string">Email</string>
    <string name="enter_your_details_string">Enter your details</string>
    <string name="confirm___pay_ek4_string">Confirm &amp; Pay</string>
    <string name="tcr_string">TCR</string>
    <string name="confirm_string">Confirm</string>
    <string name="_2_string">2</string>
    <string name="_2_ek1_string">2</string>
    <string name="_1000_string">1000</string>
    <string name="_1000_ek1_string">1000</string>
    <string name="_2000_string">2000</string>
    <string name="seats_string">Seats</string>
    <string name="seats_ek1_string">Seats</string>
    <string name="total__rs___string">Total (Rs.)</string>
    <string name="tcr_ek1_string">TCR</string>
    <string name="colombo_fort_string">Colombo Fort</string>
    <string name="gampaha_string">Gampaha</string>
    <string name="_04_09_2022_string">04-09-2022</string>
    <string name="_4017___colombo_fort_gampaha___vauniya_intercity_string">4017 -   Colombo Fort-Gampaha -  Vauniya InterCity</string>
    <string name="_4018___colombo_fort_gampaha___vauniya_intercity_string">4018 -   Colombo Fort-Gampaha -  Vauniya InterCity</string>
    <string name="_06_09_2022_string">06-09-2022</string>
    <string name="_02_string">02</string>
    <string name="departure_date___string">Departure Date :</string>
    <string name="departure___04_09_2022_string">Departure : 04-09-2022</string>
    <string name="return___06_09_2022_string">Return : 06-09-2022</string>
    <string name="return_date___string">Return Date :</string>
    <string name="passenger_count___string">Passenger Count :</string>
    <string name="from___ek4_string">From :</string>
    <string name="to___ek6_string">To :</string>
    <string name="journey_details_string">Journey Details</string>
    <string name="confirm___pay_ek8_string">Confirm &amp; Pay</string>
    <string name="proceed_with_payment_ek1_string">Proceed with payment</string>
    <string name="g_string">G</string>
    <string name="e_string">E</string>
    <string name="f_string">F</string>
    <string name="d_string">D</string>
    <string name="available_string">Available</string>
    <string name="selected_string">Selected</string>
    <string name="reserved_string">Reserved</string>
    <string name="a_string">A</string>
    <string name="b_string">B</string>
    <string name="c_string">C</string>
    <string name="_1st_class_seat_booking_ek3_string">1st Class Seat Booking</string>
    <string name="train_booking_ek1_string">Train Booking</string>
    <string name="rail_ek13_string">RAIL</string>
    <string name="t_r_i_p_ek12_string">T  R  I  P</string>
    <string name="train_booking_ek5_string">Train Booking</string>
    <string name="_1st_class_string">1st Class</string>
    <string name="_2nd_class_string">2nd Class</string>
    <string name="_3rd_class_string">3rd Class</string>
    <string name="select_class_ek1_string">Select class</string>
    <string name="select_class___string">Select Class : </string>
    <string name="_2_ek2_string">2</string>
    <string name="number_of_passengers___string">Number of Passengers :</string>
    <string name="_2022_09_10_string">2022-09-10</string>
    <string name="return_date_ek1_string">Return Date</string>
    <string name="___string">:</string>
    <string name="_2022_09_04_string">2022-09-04</string>
</resources>